# Edge-Device-Controller

./: README.md
Models/: Train_Integrated_Detection_Model.ipynb  Train_Lane_Segmentation_Model.ipynb  Train_Stopline_Detection_Model.ipynb
py file/: engine_control.py  engine_control_overlay.py
py file/analysis/: std_depth_o.py  std_depth_x.py  std_pt.py
py file/models/: classes.txt
ros2/autonomous_rc/: CMakeLists.txt  README.md  package.xml
ros2/autonomous_rc/include/autonomous_rc/: config.hpp  control_logic.hpp  motor_driver.hpp  trt_engine.hpp
ros2/autonomous_rc/launch/: run_system.py
ros2/autonomous_rc/src/: control_logic.cpp  main.cpp  motor_driver.cpp  trt_engine.cpp
